[build-system]
requires = [
	"setuptools", 
	"twine"
]
build-backend = "setuptools.build_meta"

[project]
name = "block_wrangler"
version = "0.0.4"
dependencies = [
	"rich==13.7.1"
]
dynamic = ["readme"]

[project.urls]
Homepage = "https://github.com/camplowell/block_wrangler"
Issues = "https://github.com/camplowell/block_wrangler/issues"

[project.optional-dependencies]
fuzzy_tags = ["rapidfuzz"]
dev = ["block_wrangler[fuzzy_tags]", "Jinja2==3.1.4", "setuptools", "twine", "build"]

[tool.setuptools.packages.find]
include = ["block_wrangler*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}