[build-system]
requires = [
	"hatchling", 
	"twine"
]
build-backend = "hatchling.build"

[project]
name = "block_wrangler"
version = "0.0.7"
dependencies = [
	"rich==13.7.1",
	"case-converter==1.1.0"
]
description = "Use block features instead of block IDs! (for Minecraft shaderpacks)"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/camplowell/block_wrangler"
Issues = "https://github.com/camplowell/block_wrangler/issues"

[project.optional-dependencies]
fuzzy_tags = ["rapidfuzz"]
dev = ["block_wrangler[fuzzy_tags]", "Jinja2==3.1.4", "twine", "build"]

[tool.hatchling.packages.sdist]
include = ["block_wrangler*"]

[tool.hatchling.packages.wheel]
include = ["block_wrangler*"]
